--- a/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_error_root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/content_error_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <SearchView
-            android:id="@+id/discussion_topics_searchview"
-            style="@style/discussion_topics_search_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <View style="@style/gray_separator" />
-
-        <ListView
-            android:id="@+id/discussion_topics_listview"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
-            tools:listitem="@layout/row_discussion_topic" />
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <SearchView
+                android:id="@+id/discussion_topics_searchview"
+                style="@style/discussion_topics_search_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <include layout="@layout/loading_indicator" />
+            <View style="@style/gray_separator" />
 
-    <include layout="@layout/content_error" />
+            <ListView
+                android:id="@+id/discussion_topics_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                tools:listitem="@layout/row_discussion_topic" />
 
-</FrameLayout>
+        </LinearLayout>
+
+        <include
+            android:id="@+id/loading_indicator"
+            layout="@layout/loading_indicator" />
+
+        <include layout="@layout/content_error" />
+
+    </FrameLayout>
+</layout>
