--- a/OpenEdXMobile/res/layout/view_course_unit_pager.xml
+++ b/OpenEdXMobile/res/layout/view_course_unit_pager.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pager2"
-    android:layout_width="match_parent"
-    android:layout_height="0px"
-    android:layout_weight="1"
-    android:importantForAccessibility="no"
-    android:orientation="horizontal" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pager2"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"
+        android:importantForAccessibility="no"
+        android:orientation="horizontal" />
+</layout>
