--- a/OpenEdXMobile/res/layout/content_error.xml
+++ b/OpenEdXMobile/res/layout/content_error.xml
@@ -12,7 +12,8 @@
             android:id="@+id/content_error_icon"
             android:layout_width="@dimen/content_unavailable_error_icon_size"
             android:layout_height="@dimen/content_unavailable_error_icon_size"
-            app:srcCompat="@drawable/ic_wifi" />
+            app:srcCompat="@drawable/ic_wifi"
+            app:tint="@color/neutralXXDark" />
 
         <TextView
             android:id="@+id/content_error_text"
