refactor: move resources from drawable-21 to main folder
Since our minSdkVersion is now 21, so, we don't need to have separate
drawable behavior for API Levels below and above 21.

--- a/OpenEdXMobile/res/drawable/light_selectable_rounded_box_overlay.xml
+++ b/OpenEdXMobile/res/drawable/light_selectable_rounded_box_overlay.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/white">
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="@color/transparent_white_26" />
         </shape>
     </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/transparent_white_13" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-        </shape>
-    </item>
-</selector>
+</ripple>
