--- a/OpenEdXMobile/res/drawable/selectable_box_overlay.xml
+++ b/OpenEdXMobile/res/drawable/selectable_box_overlay.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/transparent_black_26" android:state_pressed="true" />
-    <item android:drawable="@color/transparent_black_13" android:state_focused="true" />
-    <item android:drawable="@android:color/transparent" />
-</selector>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/black">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/transparent_white_26" />
+        </shape>
+    </item>
+</ripple>
