--- a/OpenEdXMobile/res/drawable/selectable_rounded_box_overlay.xml
+++ b/OpenEdXMobile/res/drawable/selectable_rounded_box_overlay.xml
@@ -1,21 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/black">
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/edx_box_radius" />
-            <solid android:color="@color/transparent_black_26" />
+            <solid android:color="@color/transparent_white_26" />
         </shape>
     </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="@dimen/edx_box_radius" />
-            <solid android:color="@color/transparent_black_13" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="@dimen/edx_box_radius" />
-            <solid android:color="@android:color/transparent" />
-        </shape>
-    </item>
-</selector>
+</ripple>
