--- a/OpenEdXMobile/res/layout/course_card.xml
+++ b/OpenEdXMobile/res/layout/course_card.xml
@@ -23,98 +23,103 @@
             tools:background="@color/primaryBaseColor" />
 
         <LinearLayout
-            android:id="@+id/course_item_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/transparent_white_85"
             android:minHeight="@dimen/course_detail_card_height"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/widget_margin"
-            android:paddingLeft="@dimen/widget_margin"
-            android:paddingTop="@dimen/widget_margin"
-            android:paddingEnd="@dimen/widget_margin"
-            android:paddingRight="@dimen/widget_margin"
-            android:paddingBottom="@dimen/widget_margin">
-
-            <TextView
-                android:id="@+id/course_name"
-                style="@style/course_card_title"
-                tools:text="@string/course_name" />
-
-            <TextView
-                android:id="@+id/course_details"
-                style="@style/course_card_course_run"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Starting October 19" />
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/new_course_content_layout"
-                android:layout_width="wrap_content"
+                android:id="@+id/course_item_detail"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                tools:visibility="visible">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/ellipsis_icon"
-                    android:layout_width="@dimen/course_card_ellipsis_icon_size"
-                    android:layout_height="@dimen/course_card_ellipsis_icon_size"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/edx_brand_primary_accent_circle"
-                    tools:ignore="ContentDescription" />
+                android:layout_gravity="bottom"
+                android:background="@color/transparent_white_85"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/course_card_detail_padding_start"
+                android:paddingTop="@dimen/course_card_detail_padding_top"
+                android:paddingEnd="@dimen/course_card_detail_padding_end"
+                android:paddingBottom="@dimen/course_card_detail_padding_bottom">
 
                 <TextView
-                    android:id="@+id/new_course_content"
+                    android:id="@+id/course_name"
+                    style="@style/course_card_title"
+                    tools:text="@string/course_name" />
+
+                <TextView
+                    android:id="@+id/course_details"
+                    style="@style/course_card_course_run"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/new_course_content"
-                    android:paddingStart="@dimen/widget_margin_half"
-                    android:paddingLeft="@dimen/widget_margin_half"
-                    android:text="@string/new_course_content"
-                    android:textAllCaps="true"
-                    android:textColor="@color/infoBase"
-                    android:textSize="@dimen/edx_x_small" />
+                    tools:text="Starting October 19" />
+
+                <LinearLayout
+                    android:id="@+id/new_course_content_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/ellipsis_icon"
+                        android:layout_width="@dimen/course_card_ellipsis_icon_size"
+                        android:layout_height="@dimen/course_card_ellipsis_icon_size"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/edx_brand_primary_accent_circle"
+                        tools:ignore="ContentDescription" />
+
+                    <TextView
+                        android:id="@+id/new_course_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@string/new_course_content"
+                        android:paddingStart="@dimen/widget_margin_half"
+                        android:paddingLeft="@dimen/widget_margin_half"
+                        android:text="@string/new_course_content"
+                        android:textAllCaps="true"
+                        android:textColor="@color/infoBase"
+                        android:textSize="@dimen/edx_x_small" />
+                </LinearLayout>
+
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ll_graded_content_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/primaryBaseColor"
+                android:orientation="horizontal"
+                android:paddingStart="@dimen/course_card_detail_padding_start"
+                android:paddingTop="@dimen/course_card_detail_padding_top"
+                android:paddingEnd="@dimen/course_card_detail_padding_end"
+                android:paddingBottom="@dimen/course_card_detail_padding_bottom">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="@dimen/ic_large"
+                    android:layout_height="@dimen/ic_large"
+                    android:layout_gravity="start|center"
+                    android:layout_marginEnd="@dimen/widget_margin"
+                    app:srcCompat="@drawable/ic_lock"
+                    app:tint="@color/white" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:fontFamily="?attr/fontSemiBold"
+                    android:text="@string/value_prop_course_card_message"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/edx_x_small" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center"
+                    app:srcCompat="@drawable/ic_chevron_right"
+                    app:tint="@color/accentAColor" />
+            </LinearLayout>
         </LinearLayout>
     </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_graded_content_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/infoXXLight"
-        android:orientation="vertical"
-        android:padding="@dimen/container_padding"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="@dimen/medium_icon_size"
-                android:layout_height="@dimen/medium_icon_size"
-                android:layout_marginTop="@dimen/widget_margin_half"
-                android:layout_marginEnd="@dimen/edx_margin"
-                app:srcCompat="@drawable/ic_emoji_events" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/course_value_prop_message"
-                android:textColor="@color/neutralBlackT"
-                android:textSize="@dimen/edx_small" />
-        </LinearLayout>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_learn_more"
-            style="@style/edX.Widget.PrimaryActionButton"
-            android:padding="@dimen/edx_half_margin"
-            android:text="@string/course_value_prop_button" />
-    </LinearLayout>
 </LinearLayout>
