--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -47,6 +47,10 @@
     <dimen name="course_detail_card_height">70dp</dimen>
     <dimen name="course_detail_share_icon_size">50dp</dimen>
     <dimen name="course_card_ellipsis_icon_size">8dp</dimen>
+    <dimen name="course_card_detail_padding_start">16dp</dimen>
+    <dimen name="course_card_detail_padding_end">16dp</dimen>
+    <dimen name="course_card_detail_padding_top">8dp</dimen>
+    <dimen name="course_card_detail_padding_bottom">8dp</dimen>
 
     <!-- Courses Toolbar -->
     <dimen name="courses_profile_icon_size">30dp</dimen>
