--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -162,16 +162,15 @@
     </style>
 
     <!-- Course Card styles -->
-    <style name="course_card_title" parent="@style/regular_primary_base_text">
+    <style name="course_card_title" parent="@style/bold_edx_black_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">3dp</item>
-        <item name="android:textSize">@dimen/edx_x_large</item>
+        <item name="android:textSize">@dimen/edx_small</item>
         <item name="android:maxLines">3</item>
         <item name="android:ellipsize">end</item>
     </style>
 
-    <style name="course_card_course_run" parent="@style/regular_primary_x_light_text">
+    <style name="course_card_course_run" parent="@style/regular_neutral_xx_dark_text">
         <item name="android:singleLine">true</item>
         <item name="android:textSize">@dimen/edx_x_small</item>
     </style>
