--- a/OpenEdXMobile/res/layout/fragment_webview_with_paddings.xml
+++ b/OpenEdXMobile/res/layout/fragment_webview_with_paddings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout
         android:id="@+id/content_error_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
