--- a/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
+++ b/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
@@ -5,12 +5,13 @@
 
     <LinearLayout
         android:id="@+id/container_layout"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/infoXXLight"
         android:orientation="vertical"
-        android:padding="@dimen/container_padding">
+        android:padding="@dimen/container_padding"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <TextView
             android:id="@+id/banner_title"
