--- a/OpenEdXMobile/res/layout/view_course_unit_pager.xml
+++ b/OpenEdXMobile/res/layout/view_course_unit_pager.xml
@@ -4,8 +4,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager2"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:importantForAccessibility="no"
         android:orientation="horizontal" />
 </layout>
