--- a/OpenEdXMobile/res/layout/fragment_webview_with_paddings.xml
+++ b/OpenEdXMobile/res/layout/fragment_webview_with_paddings.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/content_error_root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    android:paddingStart="@dimen/common_course_display_margin_side"
-    android:paddingTop="@dimen/common_course_display_margin_top"
-    android:paddingEnd="@dimen/common_course_display_margin_side"
-    android:paddingBottom="@dimen/common_course_display_margin_top">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <org.edx.mobile.view.custom.EdxWebView
-        android:id="@+id/webview"
+    <FrameLayout
+        android:id="@+id/content_error_root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none" />
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/common_course_display_margin_side"
+        android:paddingTop="@dimen/common_course_display_margin_top"
+        android:paddingEnd="@dimen/common_course_display_margin_side"
+        android:paddingBottom="@dimen/common_course_display_margin_top">
 
-    <include layout="@layout/loading_indicator" />
+        <org.edx.mobile.view.custom.EdxWebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none" />
 
-    <include layout="@layout/content_error" />
+        <include layout="@layout/loading_indicator" />
 
-</FrameLayout>
+        <include layout="@layout/content_error" />
+
+    </FrameLayout>
+</layout>
