--- a/OpenEdXMobile/res/layout/authenticated_webview.xml
+++ b/OpenEdXMobile/res/layout/authenticated_webview.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/content_error_root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <org.edx.mobile.view.custom.EdxAssessmentWebView
-        android:id="@+id/webview"
+    <FrameLayout
+        android:id="@+id/content_error_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white" />
+        android:background="@color/white">
 
-    <include layout="@layout/loading_indicator" />
+        <org.edx.mobile.view.custom.EdxAssessmentWebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white" />
 
-    <include layout="@layout/content_error" />
+        <include
+            android:id="@+id/loading_indicator"
+            layout="@layout/loading_indicator" />
 
-</FrameLayout>
+        <include
+            android:id="@+id/content_error"
+            layout="@layout/content_error" />
+
+    </FrameLayout>
+</layout>
