--- a/OpenEdXMobile/res/layout/fragment_add_post.xml
+++ b/OpenEdXMobile/res/layout/fragment_add_post.xml
@@ -1,111 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:background="@color/neutralLight">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@color/neutralLight"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/edx_margin"
-            android:paddingEnd="@dimen/edx_margin"
-            android:paddingTop="@dimen/widget_margin"
-            android:paddingBottom="@dimen/widget_margin"
-            android:background="@color/white">
+            android:orientation="vertical">
 
-            <RadioGroup
-                android:id="@+id/discussion_question_segmented_group"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/radio_tab_height"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:clipToPadding="true">
-
-                <RadioButton
-                    android:id="@+id/discussion_radio_button"
-                    style="@style/edX.Widget.SegmentedControlSegment"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/discussion_title"/>
-
-                <RadioButton
-                    android:id="@+id/question_radio_button"
-                    style="@style/edX.Widget.SegmentedControlSegment"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/discussion_question" />
-            </RadioGroup>
-
-            <FrameLayout
-                style="@style/edX.Widget.SpinnerContainer"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/widget_margin">
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/edx_margin"
+                android:paddingTop="@dimen/widget_margin"
+                android:paddingEnd="@dimen/edx_margin"
+                android:paddingBottom="@dimen/widget_margin">
 
-                <org.edx.mobile.view.custom.KeyboardDismissingSpinner
-                    android:id="@+id/topics_spinner"
-                    style="@style/edX.Widget.Spinner"
+                <RadioGroup
+                    android:id="@+id/discussion_question_segmented_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/radio_tab_height"
+                    android:layout_gravity="center"
+                    android:clipToPadding="true"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/discussion_radio_button"
+                        style="@style/edX.Widget.SegmentedControlSegment"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/discussion_title" />
+
+                    <RadioButton
+                        android:id="@+id/question_radio_button"
+                        style="@style/edX.Widget.SegmentedControlSegment"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/discussion_question" />
+                </RadioGroup>
+
+                <FrameLayout
+                    style="@style/edX.Widget.SpinnerContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:listitem="@layout/edx_spinner_item" />
-            </FrameLayout>
-        </LinearLayout>
+                    android:layout_marginTop="@dimen/widget_margin">
 
-        <include layout="@layout/edx_divider" />
+                    <org.edx.mobile.view.custom.KeyboardDismissingSpinner
+                        android:id="@+id/topics_spinner"
+                        style="@style/edX.Widget.Spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:listitem="@layout/edx_spinner_item" />
+                </FrameLayout>
+            </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/edx_margin"
-            android:paddingTop="@dimen/widget_margin"
-            android:paddingEnd="@dimen/edx_margin"
-            android:paddingBottom="@dimen/widget_margin">
+            <include layout="@layout/edx_divider" />
 
-            <EditText
-                android:id="@+id/title_edit_text"
-                style="@style/edX.Widget.EditText"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/discussion_post_title"
-                android:inputType="text"
-                android:maxLines="1" />
-
-            <EditText
-                android:id="@+id/body_edit_text"
-                style="@style/edX.Widget.EditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/widget_margin"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:gravity="top"
-                android:inputType="text|textMultiLine"
-                tools:hint="@string/discussion_body_hint_discussion" />
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/edx_margin"
+                android:paddingTop="@dimen/widget_margin"
+                android:paddingEnd="@dimen/edx_margin"
+                android:paddingBottom="@dimen/widget_margin">
 
-            <FrameLayout
-                style="@style/edX.Widget.CreationButtonLayout"
-                android:id="@+id/add_post_button">
+                <EditText
+                    android:id="@+id/title_edit_text"
+                    style="@style/edX.Widget.EditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/discussion_post_title"
+                    android:inputType="text"
+                    android:maxLines="1" />
 
-                <TextView
-                    style="@style/edX.Widget.CreationButton"
-                    android:id="@+id/add_post_button_text"
-                    tools:text="@string/discussion_add_post_button_label" />
+                <EditText
+                    android:id="@+id/body_edit_text"
+                    style="@style/edX.Widget.EditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/widget_margin"
+                    android:layout_weight="1"
+                    android:gravity="top"
+                    android:inputType="text|textMultiLine"
+                    tools:hint="@string/discussion_body_hint_discussion" />
 
-                <include layout="@layout/button_progress_indicator" />
-            </FrameLayout>
+                <FrameLayout
+                    android:id="@+id/add_post_button"
+                    style="@style/edX.Widget.CreationButtonLayout">
 
+                    <TextView
+                        android:id="@+id/add_post_button_text"
+                        style="@style/edX.Widget.CreationButton"
+                        tools:text="@string/discussion_add_post_button_label" />
+
+                    <include
+                        android:id="@+id/button_progress_indicator"
+                        layout="@layout/button_progress_indicator" />
+                </FrameLayout>
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</layout>
