--- a/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
+++ b/OpenEdXMobile/res/layout/layout_course_dates_banner.xml
@@ -9,7 +9,9 @@
         android:layout_height="wrap_content"
         android:background="@color/infoXXLight"
         android:orientation="vertical"
-        android:padding="@dimen/container_padding">
+        android:padding="@dimen/container_padding"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <TextView
             android:id="@+id/banner_title"
